qt/quick/gen_qsgengine.h

class QImage;
class QMetaObject;
class QObject;
class QSGAbstractRenderer;
class QSGEngine;
class QSGImageNode;
class QSGNinePatchNode;
class QSGRectangleNode;
class QSGRendererInterface;
class QSGTexture;
class QSize;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QImage QImage;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSGAbstractRenderer QSGAbstractRenderer;
typedef struct QSGEngine QSGEngine;
typedef struct QSGImageNode QSGImageNode;
typedef struct QSGNinePatchNode QSGNinePatchNode;
typedef struct QSGRectangleNode QSGRectangleNode;
typedef struct QSGRendererInterface QSGRendererInterface;
typedef struct QSGTexture QSGTexture;
typedef struct QSize QSize;
typedef struct QTimerEvent QTimerEvent;
QSGEngine* QSGEngine_new();
QSGEngine* QSGEngine_new2(QObject* parent);
QMetaObject* QSGEngine_metaObject(const QSGEngine* self);
void* QSGEngine_metacast(QSGEngine* self, const char* param1);
int QSGEngine_metacall(QSGEngine* self, int param1, int param2, void** param3);
struct miqt_string QSGEngine_tr(const char* s);
struct miqt_string QSGEngine_trUtf8(const char* s);
void QSGEngine_invalidate(QSGEngine* self);
QSGAbstractRenderer* QSGEngine_createRenderer(const QSGEngine* self);
QSGTexture* QSGEngine_createTextureFromImage(const QSGEngine* self, QImage* image);
QSGTexture* QSGEngine_createTextureFromId(const QSGEngine* self, unsigned int id, QSize* size);
QSGRendererInterface* QSGEngine_rendererInterface(const QSGEngine* self);
QSGRectangleNode* QSGEngine_createRectangleNode(const QSGEngine* self);
QSGImageNode* QSGEngine_createImageNode(const QSGEngine* self);
QSGNinePatchNode* QSGEngine_createNinePatchNode(const QSGEngine* self);
struct miqt_string QSGEngine_tr2(const char* s, const char* c);
struct miqt_string QSGEngine_tr3(const char* s, const char* c, int n);
struct miqt_string QSGEngine_trUtf82(const char* s, const char* c);
struct miqt_string QSGEngine_trUtf83(const char* s, const char* c, int n);
QSGTexture* QSGEngine_createTextureFromImage2(const QSGEngine* self, QImage* image, int options);
QSGTexture* QSGEngine_createTextureFromId3(const QSGEngine* self, unsigned int id, QSize* size, int options);
bool QSGEngine_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QSGEngine_virtualbase_metaObject(const void* self);
bool QSGEngine_override_virtual_metacast(void* self, intptr_t slot);
void* QSGEngine_virtualbase_metacast(void* self, const char* param1);
bool QSGEngine_override_virtual_metacall(void* self, intptr_t slot);
int QSGEngine_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSGEngine_override_virtual_event(void* self, intptr_t slot);
bool QSGEngine_virtualbase_event(void* self, QEvent* event);
bool QSGEngine_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSGEngine_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSGEngine_override_virtual_timerEvent(void* self, intptr_t slot);
void QSGEngine_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSGEngine_override_virtual_childEvent(void* self, intptr_t slot);
void QSGEngine_virtualbase_childEvent(void* self, QChildEvent* event);
bool QSGEngine_override_virtual_customEvent(void* self, intptr_t slot);
void QSGEngine_virtualbase_customEvent(void* self, QEvent* event);
bool QSGEngine_override_virtual_connectNotify(void* self, intptr_t slot);
void QSGEngine_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSGEngine_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSGEngine_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QSGEngine_staticMetaObject();
void QSGEngine_delete(QSGEngine* self);